# cmd/api/docs/swagger.json
@@ -1160,36 +1160,6 @@
                 }
             }
         },
-        "/user/cart/orderAll": {
-            "get": {
-                "description": "order all cart items",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Cart"
-                ],
-                "summary": "order cart",
-                "operationId": "order-all",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/res.Response"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/res.Response"
-                        }
-                    }
-                }
-            }
-        },
         "/user/cart/remove/{product_item_id}": {
             "delete": {
                 "description": "User can remove product item from carts",
@@ -1461,6 +1431,36 @@
                 ],
                 "summary": "order status",
                 "operationId": "list-all-order",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/res.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/res.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/order/orderall": {
+            "get": {
+                "description": "order all cart items",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "order cart",
+                "operationId": "order-all",
                 "responses": {
                     "200": {
                         "description": "OK",
